--- a/src/app/components/services/back-end-development/back-end-development.component.html
+++ b/src/app/components/services/back-end-development/back-end-development.component.html
@@ -1,4 +1,4 @@
-<div class="searvice-jumbotron">
+<!-- <div class="searvice-jumbotron">
   <div class="container">
       <div class="searvice-jumbotron-inner">
           <div class="row">
@@ -34,7 +34,57 @@
           </div>
       </div>
   </div>
+</div> -->
+
+<section class="end">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-7">
+        <h1>END TO END DEVELOPMENT</h1>
+        <p>It’ll aid us to understand your objectives. We need to get to the bottom
+          of who you are, what you stand for and who you stand besid</p>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="row">
+      <!-- <div class="col-md-1"></div> -->
+      <div class="col-md-3">
+        <h3><img src="/assets/images/services/end-to-end/icon-1.svg" /><span>Understanding System</span></h3>
+      </div>
+      <div class="col-md-3">
+        <h3><img src="/assets/images/services/end-to-end/icon-2.svg" /><span>Backend Framework</span></h3>
+      </div>
+      <div class="col-md-3">
+        <h3><img src="/assets/images/services/end-to-end/icon-3.svg" /><span>API Web Service</span></h3>
+      </div>
+      <div class="col-md-3">
+        <h3><img src="/assets/images/services/end-to-end/icon-4.svg" /><span>Scalability</span></h3>
+      </div>
+      <!-- <div class="col-md-1"></div> -->
+    </div>
+  </div>
+</section>
+
+<section class="spacing">
+  <div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <span class="highlight1">UNDERSTANDING THE </span>
+        <h5>SYSTEM</h5>
+        <p>We draw the System Roadmap based on the Design Strategy for a better Usability. In this approach we have a clear roadmap that encompasses multiple factors like Defined User Base, quantum & type of data. 
+          This set-up allows the well defined ecosystem to boost the performance, enhance scalability to alignment with the Product Vision, also get started with minimal fuss.
+      </p>
+    </div>
+    <div class="col-md-1"></div>
+    <div class="col-md-5">
+      <div class="step-image2">
+        <img src="/assets/images/services/end-to-end/image-22.svg" alt="" />
+    </div>
+    </div>
 </div>
+</div>
+</section>
 
 <div class="service-step2">
   <div class="container">
@@ -92,21 +142,21 @@
       <div class="col-md-1"></div>
           <div class="col-md-5 m-last">
             <div class="step-image">
-              <img src="/assets/images/services/end-to-end/image-3.svg" alt="" />
+              <img src="/assets/images/services/end-to-end/image-33.svg" alt="" />
           </div>
           </div>
       </div>
       <div class="row">
+        <div class="col-md-5 m-first">
+          <h5>TESTING & SUPPORT</h5>
+          <p>Quality is the key for any product success, with a well-defined quality process we delivery the product or application that are ready for go-live.</p>
+          <p>With the core implementation done there is always scope for changes and customer exprience enhancements for which we work along with your team in Release/Patch Managment to suite the end-user demand.</p>
+      </div>
+          <div class="col-md-1"></div>
           <div class="col-md-5 m-last">
             <div class="step-image">
-              <img src="/assets/images/services/end-to-end/image-4.svg" alt="" />
+              <img src="/assets/images/services/end-to-end/image-44.svg" alt="" />
             </div>
-          </div>
-          <div class="col-md-1"></div>
-          <div class="col-md-6 m-first">
-              <h5>TESTING & SUPPORT</h5>
-              <p>Quality is the key for any product success, with a well-defined quality process we delivery the product or application that are ready for go-live.</p>
-              <p>With the core implementation done there is always scope for changes and customer exprience enhancements for which we work along with your team in Release/Patch Managment to suite the end-user demand.</p>
           </div>
       </div>
   </div>
