--- a/src/app/components/services/front-end-development/development.component.html
+++ b/src/app/components/services/front-end-development/development.component.html
@@ -1,7 +1,7 @@
-<div class="searvice-jumbotron">
-    <div class="container">
+<!-- <div class="searvice-jumbotron">
+    <div class="container"> -->
         <!-- <div class="searvice-jumbotron-inner"> -->
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-md-5">
                     <h1><span class="highlight"> UI</span> DEVELOPMENT</h1>
                     <p>The design comes to life when the robust technologies are put in place to experience the best</p>
@@ -18,16 +18,50 @@
                     </div>
                 </picture>
                 </div>
-            </div>
+            </div> -->
         <!-- </div> -->
+    <!-- </div>
+</div> -->
+
+<section class="ui">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-7">
+          <h1>UI DEVELOPMENT</h1>
+          <p>It’ll aid us to understand your objectives. We need to get to the bottom
+            of who you are, what you stand for and who you stand besid
+          </p>
+        </div>
+        <div class="col-md-2"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-3">
+          <h3><img src="/assets/images/services/ui-dev/icon-1.svg" /><span>Understanding Business</span></h3>
+        </div>
+        <div class="col-md-2">
+          <h3><img src="/assets/images/services/ui-dev/icon-2.svg" /><span>Platform</span></h3>
+        </div>
+        <div class="col-md-2">
+          <h3><img src="/assets/images/services/ui-dev/icon-3.svg" /><span>Framwork</span></h3>
+        </div>
+        <div class="col-md-2">
+          <h3><img src="/assets/images/services/ui-dev/icon-4.svg" /><span>Manage</span></h3>
+        </div>
+        <div class="col-md-2">
+          <h3><img src="/assets/images/services/ui-dev/icon-5.svg" /><span>Testing</span></h3>
+        </div>
+        <!-- <div class="col-md-1"></div> -->
+      </div>
     </div>
-</div>
+  </section>
 
 <div class="spacing">
     <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h5>BUSINESS <span class="highlight">UNDERSTANDING</span></h5>
+                    <h5>BUSINESS UNDERSTANDING</h5>
                     <p>When it comes to selecting a platform it can be challenging, since that defines how the product can or cannot expand in future without technical boundaries. 
                         We strongly believe technology should aid a Product in scaling higher and not cripple the growth in any way. Based on the product vision and road map appropriate technology needs to be selected.</p>
                 </div>
@@ -80,7 +114,7 @@
     <div class="container">
         <div class="row">
           <div class="col-12">
-           <h5><span class="highlight">LANGUAGES & </span>FRAMEWORK <span class="highlight"></span></h5>
+           <h5>LANGUAGES & FRAMEWORK</h5>
           <p>We choose the right framework to suite the business needs in terms: ease of use, scalability, interoperability with standard technology, adaptability with emerging technologies and integration with back-end system.</p>
         </div>
         </div>
@@ -132,17 +166,17 @@
             </div>
         </div>
         <div class="row">
+            <div class="col-md-5 m-first">
+                <h5>TESTING & IMPLEMENTATION</h5>
+                <p>We never settle for anything less than best, we iterate with the business and 
+                    end-users to refine the interface periodically. 
+                    With focus on cross-platform and cross-browser testing to achieve the best results.</p>
+            </div>
+            <div class="col-md-1"></div>
             <div class="col-md-5 m-last">
                 <div class="step-image">
                     <img src="/assets/images/services/ui-dev/image-4.svg" alt="" />
                 </div>
-            </div>
-            <div class="col-md-1"></div>
-            <div class="col-md-6 m-first">
-                <h5><span class="highlight">TESTING </span>& IMPLEMENTATION</h5>
-                <p>We never settle for anything less than best, we iterate with the business and 
-                    end-users to refine the interface periodically. 
-                    With focus on cross-platform and cross-browser testing to achieve the best results.</p>
             </div>
         </div>
     </div>
