--- a/src/app/components/services/usability-testing/usability-testing.component.html
+++ b/src/app/components/services/usability-testing/usability-testing.component.html
@@ -1,7 +1,7 @@
-<div class="searvice-jumbotron">
-  <div class="container">
+<!-- <div class="searvice-jumbotron">
+  <div class="container"> -->
       <!-- <div class="searvice-jumbotron-inner"> -->
-          <div class="row">
+          <!-- <div class="row">
               <div class="col-md-6">
                   <h1><span class="highlight"> USABILITY </span> TESTING</h1>
                   <p>It’ll aid us to understand your objectives. We need to get to thebottom
@@ -17,12 +17,12 @@
                       <img src="/assets/images/services/usability-testing/ut1.png" alt="" />
                   </div>
               </div>
-          </div>
+          </div> -->
         <!-- </div> -->
-    </div>
-</div>
+    <!-- </div>
+</div> -->
 
-<div class="spacing">
+<!-- <div class="spacing">
   <div class="container">
           <div class="row">
             <div class="col-md-6">
@@ -39,9 +39,9 @@
             </div>
           </div>
     </div>
-</div>
+</div> -->
 
-<div class="service-step2">
+<!-- <div class="service-step2">
   <div class="container">
       <div class="row">
         <div class="col-md-5">
@@ -67,38 +67,297 @@
           </div>
       </div>
   </div>
+</div> -->
+
+<section class="usability">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-7">
+        <h1>USABILITY TESTING</h1>
+        <p>It’ll aid us to understand your objectives. We need to get to the bottom
+          of who you are, what you stand for and who you stand besid</p>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="row">
+      <!-- <div class="col-md-1"></div> -->
+      <div class="col-md-3">
+        <h3><img src="/assets/images/services/usability-testing/icon-1.svg" /><span>Understanding Product</span></h3>
+      </div>
+      <div class="col-md-3">
+        <h3><img src="/assets/images/services/usability-testing/icon-2.svg" /><span>User Scenario</span></h3>
+      </div>
+      <div class="col-md-3">
+        <h3><img src="/assets/images/services/usability-testing/icon-3.svg" /><span>Understanding Behaviour</span></h3>
+      </div>
+      <div class="col-md-3">
+        <h3><img src="/assets/images/services/usability-testing/icon-4.svg" /><span>Report</span></h3>
+      </div>
+      <!-- <div class="col-md-1"></div> -->
+    </div>
+  </div>
+</section>
+
+<section class="product">
+<div class="container">
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <h1>How Usability Testing Helpfull For A Product</h1>
+      <p>We choose the right framework to suite the business needs in terms:ease of use, 
+        scalability, interoperability with standard technology, adaptability with emerging 
+        technologies and integration with back-end system</p>
+    </div>
+    <div class="col-md-3"></div>
+  </div>
 </div>
+</section>
+
+<div class="product-list">
+<div class="shadow p-3 mb-5 bg-white rounded">
+<div class="row">
+  <div class="col-md-1"></div>
+  <div class="col-md-2">
+    <img src="/assets/images/services/usability-testing/product-1.svg" />
+    <p>Understanding The Users Point</p>
+  </div>
+  <div class="col-md-2">
+    <img src="/assets/images/services/usability-testing/product-2.svg" />
+    <p>Reduces Development Cost</p>
+  </div>
+  <div class="col-md-2">
+    <img src="/assets/images/services/usability-testing/product-3.svg" />
+    <p>Track Time Taken For Task</p>
+  </div>
+  <div class="col-md-2">
+    <img src="/assets/images/services/usability-testing/product-4.svg" />
+    <p>Reduces Risk Of Product Failing</p>
+  </div>
+  <div class="col-md-2">
+    <img src="/assets/images/services/usability-testing/product-5.svg" />
+    <p>Better User Experience</p>
+  </div>
+  <div class="col-md-1"></div>
+</div>
+</div>
+</div>
+
+<section class="testing">
+<div class="container">
+  <div class="row">
+    <div class="col-md-5">
+      <h1>How Usability Testing Is done?</h1>
+      <p>We choose the right framework to suite the business needs in terms:ease of use, 
+        scalability, interoperability with standard technology, adaptability with emerging 
+        technologies and integration with back-end system</p>
+    </div>
+    <div class="col-md-2"></div>
+    <div class="col-md-5">
+      <div class="row">
+        <div class="col-md-2">
+          <img src="/assets/images/services/usability-testing/img-1.svg" />
+        </div>
+        <div class="col-md-10">
+          <h3>Prepare Tasks</h3>
+          <p>We choose the right framework to suite</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2">
+          <img src="/assets/images/services/usability-testing/img-2.svg" />
+        </div>
+        <div class="col-md-10">
+          <h3>Recuit The Users</h3>
+          <p>We choose the right framework to suite</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2">
+          <img src="/assets/images/services/usability-testing/img-3.svg" />
+        </div>
+        <div class="col-md-10">
+          <h3>Performing Tasks By The User</h3>
+          <p>We choose the right framework to suite</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2">
+          <img src="/assets/images/services/usability-testing/img-4.svg" />
+        </div>
+        <div class="col-md-10">
+          <h3>Analysis</h3>
+          <p>We choose the right framework to suite</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2">
+          <img src="/assets/images/services/usability-testing/img-5.svg" />
+        </div>
+        <div class="col-md-10">
+          <h3>Test Report</h3>
+          <p>We choose the right framework to suite</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2">
+          <img src="/assets/images/services/usability-testing/img-6.svg" />
+        </div>
+        <div class="col-md-10">
+          <h3>Recommendation Based On Results</h3>
+          <p>We choose the right framework to suite</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+
+<section class="methods">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h1>Methods We Follow In Usability Testing</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="shadow p-3 mb-5 bg-white rounded">
+          <div class="row">
+            <div class="col-md-1">
+              <img src="/assets/images/services/usability-testing/method-1.svg" />
+            </div>
+            <div class="col-md-10">
+              <h3>Lab Based Testing</h3>
+              <p>We choose the right framework to suite the business needs in terms:ease of use, 
+                scalability, interoperability with</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="shadow p-3 mb-5 bg-white rounded">
+          <div class="row">
+            <div class="col-md-1">
+              <img src="/assets/images/services/usability-testing/method-2.svg" />
+            </div>
+            <div class="col-md-10">
+              <h3>Remote Based Testing</h3>
+              <p>We choose the right framework to suite the business needs in terms:ease of use, 
+                scalability, interoperability with</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="shadow p-3 mb-5 bg-white rounded">
+          <div class="row">
+            <div class="col-md-1">
+              <img src="/assets/images/services/usability-testing/method-3.svg" />
+            </div>
+            <div class="col-md-10">
+              <h3>Explolatory Testing</h3>
+              <p>We choose the right framework to suite the business needs in terms:ease of use, 
+                scalability, interoperability with</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="shadow p-3 mb-5 bg-white rounded">
+          <div class="row">
+            <div class="col-md-1">
+              <img src="/assets/images/services/usability-testing/method-4.svg" />
+            </div>
+            <div class="col-md-10">
+              <h3>Actual Environment Testing</h3>
+              <p>We choose the right framework to suite the business needs in terms:ease of use, 
+                scalability, interoperability with</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <div class="service-step3">
   <div class="container">
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
+        <h1>Build a product Successfull manner</h1>
+      </div>
+      <div class="col-md-3"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-4 m-first">
+        <h5>UNDERSTANDING THE PRODUCT PROTOTYPE</h5>
+          <!-- <span class="highlight">USER BEHAVIOUR</span> -->
+        <p>We choose the right framework to suite the business needs in terms:ease of use, 
+          scalability, interoperability with standard technology, adaptability with emerging 
+          technologies and integration with back-end system</p>
+      </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-4 m-last">
+          <div class="step-image">
+            <img src="/assets/images/services/usability-testing/image-1.svg" />
+          </div>
+        </div>
+        <div class="col-md-1"></div>
+    </div>
       <div class="row">
-          <div class="col-md-5 m-first">
-            <h5>UNDERSTANDING THE </h5>
-              <span class="highlight">USER BEHAVIOUR</span>
+        <div class="col-md-1"></div>
+        <div class="col-md-4 m-last">
+          <div class="step-image">
+            <img src="/assets/images/services/usability-testing/image-2.svg" />
+          </div>
+        </div>
+          <div class="col-md-1"></div>
+          <div class="col-md-4 m-first">
+            <h5>UNDERSTANDING THE USER BEHAVIOUR</h5>
+              <!-- <span class="highlight">USER BEHAVIOUR</span> -->
             <p>We choose the right framework to suite the business needs in terms:ease of use, 
               scalability, interoperability with standard technology, adaptability with emerging 
               technologies and integration with back-end system</p>
           </div>
           <div class="col-md-1"></div>
-          <div class="col-md-5 m-last">
+      </div>
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-4 m-first">
+          <h5>CREATING SCENARIO FOR THE USERS </h5>
+            <!-- <span class="highlight">USER BEHAVIOUR</span> -->
+          <p>We choose the right framework to suite the business needs in terms:ease of use, 
+            scalability, interoperability with standard technology, adaptability with emerging 
+            technologies and integration with back-end system</p>
+        </div>
+          <div class="col-md-1"></div>
+          <div class="col-md-4 m-last">
             <div class="step-image">
               <img src="/assets/images/services/usability-testing/image-3.svg" />
             </div>
           </div>
+          <div class="col-md-1"></div>
       </div>
       <div class="row">
-          <div class="col-md-5 m-last">
+        <div class="col-md-1"></div>
+          <div class="col-md-4 m-last">
             <div class="step-image">
               <img src="/assets/images/services/usability-testing/image-4.svg" />
             </div>
           </div>
           <div class="col-md-1"></div>
-          <div class="col-md-5 m-first">
-            <h4>REPORT</h4>
+          <div class="col-md-4 m-first">
+            <h5>REPORT</h5>
             <p>We choose the right framework to suite the business needs in terms:ease of use, 
               scalability, interoperability with standard technology, adaptability with emerging 
               technologies and integration with back-end system</p>
         </div>
+        <div class="col-md-1"></div>
       </div>
   </div>
 </div>
