--- a/src/app/components/services/ux-consulting/ux-consulting.component.html
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.html
@@ -1,4 +1,4 @@
-<div class="searvice-jumbotron">
+<!-- <div class="searvice-jumbotron">
     <div class="container">
             <div class="row">
                 <div class="col-md-5">
@@ -16,9 +16,101 @@
                 </div>
             </div>
     </div>
-</div>
+</div> -->
 
-<div class="service-step">
+<section class="experience">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-7">
+          <h1>USER EXPERIENCE</h1>
+          <p>Unravelling solutions for business problems in alignment with end-user expectations.
+              Creating functional, Usable, Pleasurable Unique and Value for digital products
+          </p>
+        </div>
+        <div class="col-md-2"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-3">
+          <h3><img src="/assets/images/services/user-experience/icon-1.svg" /><span>Understanding Business</span></h3>
+        </div>
+        <div class="col-md-2">
+          <h3><img src="/assets/images/services/user-experience/icon-2.svg" /><span>Platform</span></h3>
+        </div>
+        <div class="col-md-2">
+          <h3><img src="/assets/images/services/user-experience/icon-3.svg" /><span>Framwork</span></h3>
+        </div>
+        <div class="col-md-2">
+          <h3><img src="/assets/images/services/user-experience/icon-4.svg" /><span>Manage</span></h3>
+        </div>
+        <div class="col-md-2">
+          <h3><img src="/assets/images/services/user-experience/icon-5.svg" /><span>Testing</span></h3>
+        </div>
+        <!-- <div class="col-md-1"></div> -->
+      </div>
+    </div>
+  </section>
+
+  <section class="service-step">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-3"></div>
+              <div class="col-md-6">
+                <div class="image1">
+                    <img src="/assets/images/services/user-experience/image-3.svg" />
+                  </div>
+              </div>
+              <div class="col-md-3"></div>
+          </div>
+          <div class="row">
+              <div class="col-md-5">
+                  <h5>STAKEHOLDER BUSINESS DISCUSSION</h5>
+                  <p>We start our requirements gathering from the pillars of the business; the Product Owners, Business SME, 
+                      CEO/CTO to get their perspectives, needs & current process issues that they encounter and the potential areas of improvement. 
+                    Based on the inputs we define the features and the scope.</p>
+                    <div class="row">
+                        <div class="col-sm-1">
+                            <img src="/assets/images/services/icons/line.svg" />
+                        </div>
+                        <div class="col-sm-8">
+                            <h6><span> Stakeholder Interview</span></h6>
+                            <h6><span> Business Requirement Gathering</span></h6>
+                            <h6><span> Competitor Analysis</span></h6>
+                            <h6><span> Affinity Mapping</span></h6>
+                        </div>
+                </div>
+                <p>On a broader scope the vision for the product and the market context gets defined. 
+                    Next step would be SWAT Analysis on the competitors in the market.</p>
+              </div>
+              <div class="col-md-1"></div>
+              <div class="col-md-5">
+                <h5>DISCOVERING USER PROBLEMS</h5>
+                <p>We funnel the requirements from the Stakeholders, Business Team and the End-Users - align 
+                    according to the Vision of the Product. It takes a series of process to get the inference 
+                    from the Research Data. Based on the inputs gleaned from the extensive research and 
+                    analysis we plot the Journey Maps & Persona. 
+                    This allowing us to Empathise with the end-users bringing value to the Design Strategy.
+                </p>
+                <p>The Divergent & Convergent Thinking Process aims to unearth the innovative solutions 
+                    and to nail the needs & challenges of the end-users & the business.</p>
+                    <div class="row">
+                        <div class="col-sm-1">
+                            <img src="/assets/images/services/icons/line.svg" />
+                        </div>
+                        <div class="col-sm-8">
+                            <h6><span> User Research</span></h6>
+                            <h6><span> User Persona</span></h6>
+                            <h6><span> Users Journey Map</span></h6>
+                            <h6><span> Root Cause Analysis</span></h6>
+                    </div>
+                    </div>
+              </div>
+          </div>
+      </div>
+  </section>
+
+<!-- <div class="service-step">
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -57,9 +149,9 @@
                 </div>
             </div>
     </div>
-</div>
+</div> -->
 
-<div class="service-step1">
+<!-- <div class="service-step1">
     <div class="container">
         <div class="row">
         <div class="col-12">
@@ -102,13 +194,13 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
  <div class="service-step1">
     <div class="container">
         <div class="row">
             <div class="col-12">
-           <h5>SUPPORTING <span class="highlight">SOLUTIONS</span></h5>
+           <h5>SUPPORTING SOLUTIONS</h5>
         </div>
         </div>
         <div class="row">
@@ -140,11 +232,45 @@
 <div class="service-step1">
     <div class="container">
         <div class="row">
-            <div class="col-12">
+            <div class="col-md-5">
             <h5>TEST FEATURE VIABILITY</h5>
+            <p>We value your time & effort, we employ Early Testing to avoid rework due to mismatch between the
+                users/market needs. We design Visual Prototype and test in multiple stages. Iterate design based on
+                the feedback avoiding changes during the product development or even worse after market launch 
+                which could be very expensive for the business.</p>
+                <div class="row">
+                    <div class="col-sm-1">
+                        <img src="/assets/images/services/icons/line.svg" />
+                    </div>
+                    <div class="col-sm-8">
+                        <h6><span> Low Fidelity Wireframe</span></h6>
+                        <h6><span> High Fidelity Wireframe</span></h6>
+                        <h6><span> Clickable Prototyping</span></h6>
+                        <h6><span> Iteration</span></h6>
+                    </div>
+                </div>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-5">
+            <h5>MARKET LAUNCH</h5>
+            <p>With multiple iterations and checkpoints at various stages we ensure the prototype is 
+                ready for hassle freemarket development and market launch.</p>
+                <div class="row">
+                    <div class="col-sm-1">
+                        <img src="/assets/images/services/icons/line.svg" />
+                    </div>
+                    <div class="col-sm-8">
+                        <h6><span> Web Analytics</span></h6>
+                        <h6><span> High Fidelity Wireframe</span></h6>
+                        <h6><span> Clickable Prototyping</span></h6>
+                        <h6><span> Iteration</span></h6>
+                    </div>
+                </div>
         </div>
     </div>
-            <div class="row">
+</div>
+</div>
+            <!-- <div class="row">
                 <div class="col-md-5 m-first">
                     <p>We value your time & effort, we employ Early Testing to avoid rework due to mismatch between the
                         users/market needs. We design Visual Prototype and test in multiple stages. Iterate design based on
@@ -168,11 +294,10 @@
                         <img src="/assets/images/services/user-experience/image-5.svg" alt="" />
                     </div>
                 </div>
-            </div>
-    </div>
-</div>
+            </div> -->
+   
 
-<div class="service-step2">
+<!-- <div class="service-step2">
     <div class="container">
         <div class="row">
             <div class="col-md-5 m-first">
@@ -196,7 +321,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 <div class="service-step9">
     <div class="step-heading">
