--- a/src/app/components/services/visual-design/visual-design.component.html
+++ b/src/app/components/services/visual-design/visual-design.component.html
@@ -1,4 +1,4 @@
-<div class="searvice-jumbotron">
+<!-- <div class="searvice-jumbotron">
     <div class="container">
         <div class="searvice-jumbotron-inner">
             <div class="row">
@@ -47,7 +47,51 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
+
+<section class="interface">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-7">
+          <h1>INTERFACE DESIGN</h1>
+          <p>It’ll aid us to understand your objectives. We need to get to the bottom
+            of who you are, what you stand for and who you stand besid</p>
+        </div>
+        <div class="col-md-2"></div>
+      </div>
+      <div class="row list-icons">
+        <div class="col-md-2">
+            <img src="/assets/images/services/interface-design/vdicon1.png" alt="" />
+            <p>Mood Board</p>
+        </div>
+        <div class="col-md-2">
+            <img src="/assets/images/services/interface-design/vdicon2.png" alt="" />
+            <p>Colors & Typography</p>
+        </div>
+        <div class="col-md-1">
+            <img src="/assets/images/services/interface-design/vdicon3.png" alt="" />
+            <p>Iconography</p>
+        </div>
+        <div class="col-md-2">
+            <img src="/assets/images/services/interface-design/vdicon4.png" alt="" />
+            <p>User Interface</p>
+        </div>
+        <div class="col-md-2">
+            <img src="/assets/images/services/interface-design/vdicon5.png" alt="" />
+            <p>Layout & Style Guide</p>
+        </div>
+        <div class="col-md-1">
+            <img src="/assets/images/services/interface-design/vdicon6.png" alt="" />
+            <p>Illustrations</p>
+        </div>
+        <div class="col-md-2">
+            <img src="/assets/images/services/interface-design/vdicon7.png" alt="" />
+            <p>Branding & Logos</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
 <div class="service-step1">
     <div class="container">
