--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -17,20 +17,20 @@
         }
         .step-image{
             text-align: left;
-            margin-top: -30px;
+            margin-top: -25px;
             background-image: url('/assets/images/sample/line.svg');
-            width: 56%;
-            height: 14px;
+            width: 41%;
+            height: 8px;
             img{
                 width: 0%;
                 height: auto;
             }
         }
         h1{
-            font-size: 64px;
+            font-size: 34px;
             font-weight: 400;
-            margin-top: 100px;
-            margin-bottom: -20px;
+            margin-top: 180px;
+            //margin-bottom: -20px;
         }
           .rw-wrapper {position: relative;}
           
@@ -218,16 +218,16 @@
                 margin-bottom: -15px;
             }
             .step-image{
-                margin-top: 0px;
-                width: 66%;
-                height: 10px;
+                margin-top: 6px;
+                // width: 50%;
+                // height: 8px;
                 img{
                     width: 0%;
                     height: auto;
                 }
             }
             h1{
-                font-size: 32px;
+                font-size: 22px;
                 margin-top: 70px;
                 margin-bottom: -20px;
             }
