--- a/src/app/components/services/back-end-development/back-end-development.component.scss
+++ b/src/app/components/services/back-end-development/back-end-development.component.scss
@@ -37,61 +37,108 @@ p{
     font-weight: 300;
     cursor: pointer;
 }
-.searvice-jumbotron{
-    background-color: rgb(255, 255, 255); 
-    margin-top: 50px;
+// .searvice-jumbotron{
+//     background-color: rgb(255, 255, 255); 
+//     margin-top: 50px;
+//     h1{
+//         margin-top: 37px;
+//     }
+//     .step-image1 img{
+//         width: 120%;
+//         height: auto;
+//         margin-top: 30px;
+//     }
+//     .step-image2 img{
+//         width: 80%;
+//         height: auto;
+//     }
+//     img{
+//         margin-bottom: 5px;
+//     }
+//     .spacing{
+//         margin-top: 120px;
+//         margin-bottom: 80px;
+//         .highlight1{
+//             font-size: 24px;
+//             font-weight: 300;
+//             text-align: left;
+//             line-height: 20px;
+//         }
+//     }
+//     .highlight1{
+//         font-size: 24px;
+//         font-weight: 300;
+//         text-align: left;
+//     }
+//     .step-image1{
+//         p{
+//             color: #797979;
+//             font-size: 13px;
+//             font-weight: 300;
+//             text-align: center;
+//             margin-bottom: 28px;
+//             margin-top: 14px; 
+//         }
+//     }
+//     h3{
+//         color: #6C6C6C;
+//         font-size: 14px;
+//         font-weight: 300;
+//         text-align: left;
+//         margin-bottom: 20px;
+//     }
+//     .list{
+//         margin-left: 35px;
+//     }
+// }
+.end{
+    margin-top: 150px;
+    margin-bottom: 150px;
     h1{
-        margin-top: 37px;
+        font-size: 64px;
+        font-weight: 400;
+        text-align: center;
+        font-family: 'Noto Serif SC', serif;
     }
-    .step-image1 img{
-        width: 120%;
-        height: auto;
-        margin-top: 30px;
+    p{
+        font-size: 14px;
+        font-weight: 300;
+        text-align: center;
     }
-    .step-image2 img{
-        width: 80%;
-        height: auto;
-    }
-    img{
-        margin-bottom: 5px;
-    }
-    .spacing{
-        margin-top: 120px;
-        margin-bottom: 80px;
-        .highlight1{
-            font-size: 24px;
+    h3{
+        margin-top: 130px;
+        text-align: center;
+        img{
+            width: 20%;
+            height: 30px;
+        }
+        span{
+            font-size: 14px;
             font-weight: 300;
-            text-align: left;
-            line-height: 20px;
+            margin-left: 10px;
         }
     }
+}
+.spacing{
+    margin-top: 120px;
+    margin-bottom: 80px;
     .highlight1{
         font-size: 24px;
         font-weight: 300;
         text-align: left;
+        line-height: 20px;
     }
-    .step-image1{
-        p{
-            color: #797979;
-            font-size: 13px;
-            font-weight: 300;
-            text-align: center;
-            margin-bottom: 28px;
-            margin-top: 14px; 
-        }
-    }
-    h3{
-        color: #6C6C6C;
-        font-size: 14px;
-        font-weight: 300;
-        text-align: left;
-        margin-bottom: 20px;
-    }
-    .list{
-        margin-left: 35px;
+    .step-image2{
+        text-align: center;
+     img{
+        width: 80%;
+        height: auto;
     }
 }
-
+    img{
+        margin-bottom: 5px;
+    }
+}
 .service-step1{
     background-color: #272727; 
     margin-top: -15px;
@@ -179,31 +226,62 @@ p{
     .btn{
         font-size: 10px;
     }
-    .searvice-jumbotron{
-        margin-top: 0px;
-        h3{
+    .end{
+        margin-top: 60px;
+        margin-bottom: 80px;
+        h1{
+            font-size: 35px;
+            font-weight: 400;
+            text-align: left;
+            font-family: 'Noto Serif SC', serif;
+        }
+        p{
             font-size: 13px;
+            font-weight: 300;
+            text-align: justify;
         }
-        .step-image1 img{
-            width: 100%;
-            height: auto;
-            margin-top: 50px;
-        }
-        .step-image2{
+        h3{
             margin-top: 30px;
-            text-align: center;
+            text-align: left;
             img{
-                width: 80%;
-                height: auto;
+                width: 20%;
+                height: 30px;
+            }
+            span{
+                font-size: 13px;
+                font-weight: 300;
+                margin-left: 10px;
             }
         }
+    }
     .spacing{
         margin-top: 50px;
-        .highlight1{
-            font-size: 17px;
-        }
     }
-}
+//     .searvice-jumbotron{
+//         margin-top: 0px;
+//         h3{
+//             font-size: 13px;
+//         }
+//         .step-image1 img{
+//             width: 100%;
+//             height: auto;
+//             margin-top: 50px;
+//         }
+//         .step-image2{
+//             margin-top: 30px;
+//             text-align: center;
+//             img{
+//                 width: 80%;
+//                 height: auto;
+//             }
+//         }
+//     .spacing{
+//         margin-top: 50px;
+//         .highlight1{
+//             font-size: 17px;
+//         }
+//     }
+// }
 .service-step3{
     .row{
         margin-top: 30px;
