--- a/src/app/components/services/front-end-development/development.component.scss
+++ b/src/app/components/services/front-end-development/development.component.scss
@@ -36,40 +36,69 @@ p{
     font-weight: 300;
     cursor: pointer;
 }
-.searvice-jumbotron{
-    //background-color: rgb(255, 255, 255); 
-    margin-top: 75px;
+
+.ui{
+    margin-top: 150px;
+    margin-bottom: 100px;
     h1{
-        margin-top: 37px;
+        font-size: 64px;
+        font-weight: 400;
+        text-align: center;
+        font-family: 'Noto Serif SC', serif;
     }
-    .step-image1{
-        margin-top: 20px;
-        img{
-        width: 120%;
-        height: auto;
-        }
-    }
-    .step-image1{
-        p{
-            font-weight: 300;
-            color: #797979;
-            font-size: 13px;
-            text-align: center;
-            margin-bottom: 28px;
-            margin-top: 14px; 
-        }
-    }
-    h3{
-        color: #6C6C6C;
+    p{
         font-size: 14px;
         font-weight: 300;
-        text-align: left;
-        margin-bottom: 20px;
+        text-align: center;
     }
-    .list{
-        margin-left: 35px;
+    h3{
+        margin-top: 130px;
+        text-align: center;
+        img{
+            width: 30%;
+            height: 30px;
+        }
+        span{
+            font-size: 14px;
+            font-weight: 300;
+            margin-left: 10px;
+        }
     }
 }
+// .searvice-jumbotron{
+//     //background-color: rgb(255, 255, 255); 
+//     margin-top: 75px;
+//     h1{
+//         margin-top: 37px;
+//     }
+//     .step-image1{
+//         margin-top: 20px;
+//         img{
+//         width: 120%;
+//         height: auto;
+//         }
+//     }
+//     .step-image1{
+//         p{
+//             font-weight: 300;
+//             color: #797979;
+//             font-size: 13px;
+//             text-align: center;
+//             margin-bottom: 28px;
+//             margin-top: 14px; 
+//         }
+//     }
+//     h3{
+//         color: #6C6C6C;
+//         font-size: 14px;
+//         font-weight: 300;
+//         text-align: left;
+//         margin-bottom: 20px;
+//     }
+//     .list{
+//         margin-left: 35px;
+//     }
+// }
 
 .spacing{
     margin-top: 130px;
@@ -112,7 +141,7 @@ p{
             vertical-align: middle;
             min-width: 26px;
             display: inline-block;
-            color: #60D6C9;
+            color: #E2D42E;
             padding: 10px;
         }
         p{
@@ -181,20 +210,48 @@ p{
     .btn{
         font-size: 10px;
     }
-    .searvice-jumbotron{
-        margin-top: 0px;
-        .step-image1{
+    .ui{
+        margin-top: 60px;
+        margin-bottom: 80px;
+        h1{
+            font-size: 35px;
+            font-weight: 400;
+            text-align: left;
+            font-family: 'Noto Serif SC', serif;
+        }
+        p{
+            font-size: 13px;
+            font-weight: 300;
+            text-align: justify;
+        }
+        h3{
+            margin-top: 30px;
+            text-align: left;
             img{
-            width: 100%;
-            height: auto;
-            margin-top: 20px;
-            margin-bottom: 20px;
+                width: 20%;
+                height: 30px;
+            }
+            span{
+                font-size: 13px;
+                font-weight: 300;
+                margin-left: 10px;
             }
         }
-    h3{
-        font-size: 13px;
     }
-}
+//     .searvice-jumbotron{
+//         margin-top: 0px;
+//         .step-image1{
+//             img{
+//             width: 100%;
+//             height: auto;
+//             margin-top: 20px;
+//             margin-bottom: 20px;
+//             }
+//         }
+//     h3{
+//         font-size: 13px;
+//     }
+// }
 .spacing{
     margin-top: 50px;
     margin-bottom: 50px;
